--- a/chart/templates/daemonset.yaml
+++ b/chart/templates/daemonset.yaml
@@ -27,7 +27,7 @@ spec:
               mountPath: /host
           resources: {}
           env:
-            - name: K8S_NODE_NAME
+            - name: NODE_NAME
               valueFrom:
                 fieldRef:
                   fieldPath: spec.nodeName
