--- a/test.yaml
+++ b/test.yaml
@@ -22,7 +22,7 @@ spec:
           mountPath: /host
       resources: {}
       env:
-        - name: K8S_NODE_NAME
+        - name: NODE_NAME
           valueFrom:
             fieldRef:
               fieldPath: spec.nodeName
